Fixes weird issue where twitter icons weren't showing on iOS

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -49,8 +49,9 @@
 .social {
   margin-top: 1em;
 
-  .twitter-link {
+  a {
     display: inline-flex;
+    align-items: center;
 
     @media (min-width: $m) {
       justify-content: center;
